# influencer_search_app

./: .gitignore  README.md  build_llamaindex.py  diagnostic_tests.py  generate.py  main.py  process_instagram_data.py  pyproject.toml  test_boost.py  test_comprehensive_system.py  test_direct_search.py  test_multimodal_search.py
app/: build_index.py  data_init.py  data_loader.py  embedding_service.py  excel_data_processor.py  instagram_data_processor.py  instagram_scraper.py  schemas.py  search_engine.py  settings.py  vector_store.py  workflow.py
data/: instagram_influencers_final_20250708.csv  real_influencers_list.xlsx  real_influencers_processed.csv  sample_influencers.csv
docs/: Implementation_Roadmap.md  Instagram_Data_Collection_Guide.md  Library_Comparison.md  Multimodal_Search_Research.md  Phase2_Summary.md  README.md  README_Images.md  Technical_Architecture.md
examples/: collect_instagram_data.py
layout/: header.tsx
static/css/: style.css
static/js/: app.js
templates/: index.html
